--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,209 @@
-streamlit
-streamlit-option-menu
-streamlit-pandas-profiling
-ydata-profiling
-pandas
-pycaret
-pygwalker
-autoviz
-numpy
-scipy
-scikit-learn
-statsmodels
-category-encoders
-matplotlib
-openpyxl
-google-generativeai
-google-ai-generativelanguage
-plotly
+altair==5.4.1
+annotated-types==0.7.0
+appdirs==1.4.4
+arrow==1.3.0
+astor==0.8.1
+asttokens==2.4.1
+attrs==24.2.0
+autoviz==0.1.905
+backoff==2.2.1
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+bokeh==3.4.3
+cachetools==5.5.0
+category-encoders==2.6.4
+causal-learn==0.1.3.8
+certifi==2024.8.30
+charset-normalizer==3.4.0
+clarabel==0.9.0
+click==8.1.7
+cloudpickle==3.1.0
+cmdstanpy==1.2.4
+colorcet==3.1.0
+comm==0.2.2
+contourpy==1.3.0
+cvxpy==1.5.3
+cycler==0.12.1
+Cython==3.0.11
+dacite==1.8.1
+dash==2.18.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dateutils==0.6.12
+decorator==5.1.1
+deprecation==2.1.0
+dowhy==0.11.1
+duckdb==1.1.2
+ecos==2.0.14
+emoji==2.14.0
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
+Flask==3.0.3
+fonttools==4.54.1
+fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
+google==3.0.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.65.0
+graphviz==0.20.3
+greenlet==3.1.1
+grpcio==1.67.0
+grpcio-status==1.67.0
+gw_dsl_parser==0.1.49.1
+holidays==0.59
+holoviews==1.19.1
+htmlmin==0.1.12
+httplib2==0.22.0
+hvplot==0.11.1
+idna==3.10
+ImageHash==4.3.1
+imbalanced-learn==0.12.4
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+ipylab==1.0.0
+ipython==8.18.1
+ipywidgets==8.1.5
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.3.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
+kaleido==0.2.1
+kanaries_track==0.0.5
+kiwisolver==1.4.7
+lightgbm==4.5.0
+linkify-it-py==2.0.3
+llvmlite==0.43.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.7.5
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+monotonic==1.6
+mpmath==1.3.0
+multimethod==1.12
+narwhals==1.10.0
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.2.1
+nltk==3.9.1
+numba==0.60.0
+numpy==1.26.3
+orjson==3.10.10
+osqp==0.6.7.post3
+packaging==24.1
+pandas==2.1.4
+pandas-dq==1.29
+pandas-profiling==3.6.6
+panel==1.4.5
+param==2.1.1
+parso==0.8.4
+patsy==0.5.6
+pexpect==4.9.0
+phik==0.12.4
+pillow==10.4.0
+platformdirs==4.3.6
+plotly==5.24.1
+plotly-resampler==0.10.0
+pmdarima==2.0.4
+prompt_toolkit==3.0.48
+prophet==1.1.6
+proto-plus==1.25.0
+protobuf==5.28.3
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyamg==5.2.1
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycaret==3.3.2
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydot==3.0.2
+Pygments==2.18.0
+pygwalker==0.4.9.10
+pyod==2.0.2
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+pyviz_comms==3.0.3
+PyWavelets==1.6.0
+PyYAML==6.0.2
+qdldl==0.1.7.post4
+quickjs==1.19.4
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+retrying==1.3.4
+rich==13.9.3
+rpds-py==0.20.0
+rsa==4.9
+schemdraw==0.15
+scikit-base==0.7.8
+scikit-learn==1.4.2
+scikit-plot==0.3.7
+scipy==1.11.4
+scs==3.2.7
+seaborn==0.13.2
+segment-analytics-python==2.2.3
+six==1.16.0
+sktime==0.26.0
+smmap==5.0.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+sqlglot==25.27.0
+stack-data==0.6.3
+stanio==0.5.1
+statsmodels==0.14.4
+streamlit==1.39.0
+streamlit-option-menu==0.4.0
+streamlit-pandas-profiling==0.1.3
+sympy==1.13.3
+tbats==1.1.3
+tenacity==9.0.0
+textblob==0.18.0.post0
+threadpoolctl==3.5.0
+toml==0.10.2
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+tsdownsample==0.1.3
+typeguard==4.3.0
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+tzdata==2024.2
+uc-micro-py==1.0.3
+uritemplate==4.1.1
+urllib3==2.2.3
+visions==0.7.6
+wasmtime==25.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.5
+widgetsnbextension==4.0.13
+wordcloud==1.9.3
+wurlitzer==3.1.1
+xgboost==1.6.2
+xlrd==2.0.1
+xxhash==3.5.0
+xyzservices==2024.9.0
+ydata-profiling==4.11.0
+yellowbrick==1.5
+zipp==3.20.2
